# telegram-marketing-audit-bot

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  restart_bot.sh
app/: __init__.py
app/core/: __init__.py  logging.py  retry.py  settings.py  utils.py
app/features/: __init__.py
app/features/audit/: __init__.py
app/features/audit/adapters/: __init__.py  cleaner.py  fetcher.py  fetcher_playwright.py  llm.py  playwright_fetcher.py  sheets.py
app/features/audit/schemas/: __init__.py  models.py
app/features/audit/services/: persist.py  run_audit.py
app/storage/: __init__.py  sqlite.py
app/telegram/: __init__.py  bot.py  handlers.py  keyboards.py  texts.py
telegram-marketing-audit-bot/: .gitignore
tests/: simple_playwright_test.py  test_cleaner.py  test_comparison_http_vs_playwright.py  test_e2e.py  test_find_pricing.py  test_models.py  test_playwright_final.py  test_playwright_functional.py  test_playwright_integration.py  test_runner.py  test_sqlite.py  test_url_normalize.py
